--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,1 +1,25 @@
+---
+---
 
+.white-color {
+    fill: white;
+    padding-right: 5px;
+    padding-left: 5px;
+    width: 50px;
+    height: 50px;
+}
+
+.profile {
+   border:1px solid #3E3A9E;
+}
+
+$header-bg-color: #2169C8;
+$header-bg-color-secondary: #F9DE34;
+$section-headings-color: #2169C8;
+
+$section-headings-color: #2169C8 !default;
+$body-text-color: #606c71 !default;
+$body-link-color: #1e6bb8 !default;
+$blockquote-text-color: #819198 !default;
+
+@import 'jekyll-theme-cayman';
