--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,9 +13,9 @@
    border:1px solid #3E3A9E;
 }
 
-$header-bg-color: #2169C8;
-$header-bg-color-secondary: #F9DE34;
-$section-headings-color: #2169C8;
+$header-bg-color: #FBCC32;
+$header-bg-color-secondary: #2169C8;
+$section-headings-color: #FBCC32;
 
 $section-headings-color: #2169C8 !default;
 $body-text-color: #606c71 !default;
