--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,7 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="https://mrfanning.github.io" class="btn"> About Me </a>
-        <a href="https://mrfanning.github.io" class="btn"> For Teachers </a>
-        <a href="https://mrfanning.github.io" class="btn"> For Students </a>
-      <a href="https://mrfanning.github.io" class="btn"> Explorations In Statistics </a>
+        <a href="https://mrfanning.github.io" class="btn"> Taching Website </a>
       {% endif %}
     </header>
     
