--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,9 +13,9 @@
    border:1px solid #3E3A9E;
 }
 
-$header-bg-color: #8A09FA;
-$header-bg-color-secondary: #1027F7;
-$section-headings-color: #8A09FA;
+$header-bg-color: #92FE9D;
+$header-bg-color-secondary: #00C9FF;
+$section-headings-color: #92FE9D;
 
 $section-headings-color: #2169C8 !default;
 $body-text-color: #606c71 !default;
