--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,9 +13,9 @@
    border:1px solid #3E3A9E;
 }
 
-$header-bg-color: #0b8793;
-$header-bg-color-secondary: #360033;
-$section-headings-color: #0b8793;
+$header-bg-color: #514a9d;
+$header-bg-color-secondary: #24c6dc;
+$section-headings-color: #514a9d;
 
 $section-headings-color: #2169C8 !default;
 $body-text-color: #606c71 !default;
