--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,7 +31,7 @@ $section-headings-color: #514a9d;
 
 $section-headings-color: #2169C8 !default;
 $body-text-color: #606c71 !default;
-$body-link-color: #1e6bb8 !default;
+$body-link-color: #514a9d !default;
 $blockquote-text-color: #819198 !default;
 
 @import 'jekyll-theme-cayman';
